tests/snapshots/lib__snapshots__filter@parse_spec_string_level.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: "crate1::mod1=wrong,crate2=warn"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
