tests/snapshots/lib__snapshots__filter@parse_spec_valid_filter.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: "crate1::mod1=error,crate1::mod2,crate2=debug/abc"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
            Directive {
                target: Some(
                    "crate1::mod2",
                ),
                level: LevelFilter::TRACE,
            },
            Directive {
                target: Some(
                    "crate1::mod1",
                ),
                level: LevelFilter::ERROR,
            },
        ],
    },
    regex: Some(
        abc,
    ),
}
