tests/snapshots/lib__snapshots__filter@regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 24
expression: "error,hello=warn/[0-9]"
---
Filter {
    directives: [
        Directive {
            target: None,
            level: LevelFilter::ERROR,
        },
        Directive {
            target: Some(
                "hello",
            ),
            level: LevelFilter::WARN,
        },
    ],
    regex: Some(
        [0-9],
    ),
}
