tests/snapshots/lib__snapshots__filter@target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 67
expression: "example::log::target=level"
---
Filter {
    directives: [],
    regex: None,
}
