tests/snapshots/lib__snapshots__legacy@just-a-field.env_filter.snap
---
source: tests/snapshots.rs
expression: "[{field}]"
---
[{field}]=trace,[{field}]=trace
(no warnings)
