tests/snapshots/lib__snapshots__legacy@levels-reverse.env_filter.snap
---
source: tests/snapshots.rs
expression: "trace,debug,info,warn,error,off"
---
off

(no warnings)
